--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/sudhir/Library/Android/sdk
-flutter.sdk=/Users/sudhir/Documents/Flutter SDK/flutter-3.24.4
+sdk.dir=/Users/keval/Library/Android/sdk
+flutter.sdk=/Users/keval/SDK/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
