--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^1.0.5
 
   provider: ^6.1.1
+  get: ^4.7.2
 
   path_provider: ^2.1.1
   permission_handler: ^11.1.0
@@ -44,6 +45,14 @@ dependencies:
   mime_type: ^1.0.0
   http_parser:
   audio_session:
+  shimmer: ^3.0.0
+  package_info_plus: ^8.3.0
+  geocoding: ^3.0.0
+
+  #Firebase
+  firebase_core: ^3.13.0
+  firebase_remote_config: ^5.4.3
+
 
 
 dev_dependencies:
